--- a/surface_flux.html
+++ b/surface_flux.html
@@ -15,12 +15,12 @@
         </STYLE>
 </head>
 <body>
-<a name="TOP"></a><font class="header" size="1"><a href="#PUBLIC%20INTERFACE">PUBLIC INTERFACE </a>~
-          <a href="#PUBLIC%20DATA">PUBLIC DATA </a>~
-          <a href="#PUBLIC%20ROUTINES">PUBLIC ROUTINES </a>~
+<a name="TOP"></a><font class="header" size="1"><a href="#PUBLIC INTERFACE">PUBLIC INTERFACE </a>~
+          <a href="#PUBLIC DATA">PUBLIC DATA </a>~
+          <a href="#PUBLIC ROUTINES">PUBLIC ROUTINES </a>~
           <a href="#NAMELIST">NAMELIST </a>~
-          <a href="#DIAGNOSTIC%20FIELDS">DIAGNOSTIC FIELDS </a>~
-          <a href="#ERROR%20MESSAGES">ERROR MESSAGES </a>~
+          <a href="#DIAGNOSTIC FIELDS">DIAGNOSTIC FIELDS </a>~
+          <a href="#ERROR MESSAGES">ERROR MESSAGES </a>~
           <a href="#REFERENCES">REFERENCES </a>~ 
           <a href="#NOTES">NOTES</a></font>
 <hr>
@@ -53,7 +53,7 @@
 </div>
 <br>
 <!-- END DESCRIPTION -->
-<a name="OTHER%20MODULES%20USED"></a>
+<a name="OTHER MODULES USED"></a>
 <hr>
 <h4>OTHER MODULES USED</h4>
 <!-- BEGIN OTHER MODULES USED -->
@@ -62,7 +62,7 @@
 </div>
 <!-- END OTHER MODULES USED -->
 <!-- BEGIN PUBLIC INTERFACE -->
-<a name="PUBLIC%20INTERFACE"></a>
+<a name="PUBLIC INTERFACE"></a>
 <hr>
 <h4>PUBLIC INTERFACE</h4>
 <div>
@@ -74,7 +74,7 @@
 </div>
 <br>
 <!-- END PUBLIC INTERFACE -->
-<a name="PUBLIC%20DATA"></a>
+<a name="PUBLIC DATA"></a>
 <hr>
 <h4>PUBLIC DATA</h4>
 <!-- BEGIN PUBLIC DATA -->
@@ -82,7 +82,7 @@
 <br>
 </div>
 <!-- END PUBLIC DATA -->
-<a name="PUBLIC%20ROUTINES"></a>
+<a name="PUBLIC ROUTINES"></a>
 <hr>
 <h4>PUBLIC ROUTINES</h4>
 <!-- BEGIN PUBLIC ROUTINES -->
@@ -102,7 +102,7 @@
      cd_m,      cd_t,       cd_q,                                      &amp;
      w_atm,     u_star,     b_star,     q_star,                        &amp;
      dhdt_surf, dedt_surf,  dedq_surf,  drdt_surf,                     &amp;
-     dhdt_atm,  dedq_atm,   dtaudv_atm,                                &amp;
+     dhdt_atm,  dedq_atm,   dtaudu_atm, dtaudv_atm,                    &amp;
      dt,        land,      seawater,     avail  )</pre>
 </td>
 </tr>
@@ -244,7 +244,10 @@
 <td valign="top" align="left"><tt>dedq_atm&nbsp;&nbsp;&nbsp;</tt></td><td>   Derivative of water vapor flux over temp at the lowest atmos level. <br>&nbsp;&nbsp;&nbsp;<span class="type">[real, dimension(:)]</span></td>
 </tr>
 <tr>
-<td valign="top" align="left"><tt>dtaudv_atm&nbsp;&nbsp;&nbsp;</tt></td><td>   Derivative of wind stress with regard to the lowest level wind speed of the atmos <br>&nbsp;&nbsp;&nbsp;<span class="type">[real, dimension(:)]</span></td>
+<td valign="top" align="left"><tt>dtaudu_atm&nbsp;&nbsp;&nbsp;</tt></td><td>   Derivative of zonal wind stress with regard to the lowest level zonal wind speed of the atmos <br>&nbsp;&nbsp;&nbsp;<span class="type">[real, dimension(:)]</span></td>
+</tr>
+<tr>
+<td valign="top" align="left"><tt>dtaudv_atm&nbsp;&nbsp;&nbsp;</tt></td><td>   Derivative of meridional wind stress with regard to the lowest level meridional wind speed of the atmos <br>&nbsp;&nbsp;&nbsp;<span class="type">[real, dimension(:)]</span></td>
 </tr>
 <tr>
 <td valign="top" align="left"><tt>dt&nbsp;&nbsp;&nbsp;</tt></td><td>   Time step (it is not used presently) <br>&nbsp;&nbsp;&nbsp;<span class="type">[real]</span></td>
@@ -256,7 +259,7 @@
 </li>
 </ol>
 <!-- END PUBLIC ROUTINES -->
-<a name="PUBLIC%20TYPES"></a>
+<a name="PUBLIC TYPES"></a>
 <!-- BEGIN PUBLIC TYPES -->
 <!-- END PUBLIC TYPES --><a name="NAMELIST"></a>
 <!-- BEGIN NAMELIST -->
@@ -291,6 +294,13 @@
 <span class="type">[logical, default: .false.]</span>
 </dl>
 <dt>
+<tt>old_dtaudv</tt>
+</dt>
+<dl>   The derivative of surface wind stress w.r.t. the zonal wind and
+   meridional wind are approximated by the same tendency. <br>
+<span class="type">[logical, default: .false.]</span>
+</dl>
+<dt>
 <tt>use_mixing_ratio</tt>
 </dt>
 <dl>   An option to provide capability to run the Manabe Climate form of the 
@@ -321,9 +331,9 @@
 </div>
 <br>
 <!-- END NAMELIST -->
-<a name="DIAGNOSTIC%20FIELDS"></a>
+<a name="DIAGNOSTIC FIELDS"></a>
 <!-- BEGIN DIAGNOSTIC FIELDS -->
-<!-- END DIAGNOSTIC FIELDS --><a name="DATA%20SETS"></a>
+<!-- END DIAGNOSTIC FIELDS --><a name="DATA SETS"></a>
 <!-- BEGIN DATA SETS -->
 <hr>
 <h4>DATA SETS</h4>
@@ -331,9 +341,9 @@
 <br>
 </div>
 <!-- END DATA SETS -->
-<a name="PUBLIC%20CODE"></a>
+<a name="PUBLIC CODE"></a>
 <!-- BEGIN PUBLIC CODE -->
-<!-- END PUBLIC CODE --><a name="ERROR%20MESSAGES"></a>
+<!-- END PUBLIC CODE --><a name="ERROR MESSAGES"></a>
 <!-- BEGIN ERROR MESSAGES -->
 <hr>
 <h4>ERROR MESSAGES</h4>
