--- a/surface_flux.html
+++ b/surface_flux.html
@@ -244,10 +244,12 @@
 <td valign="top" align="left"><tt>dedq_atm&nbsp;&nbsp;&nbsp;</tt></td><td>   Derivative of water vapor flux over temp at the lowest atmos level. <br>&nbsp;&nbsp;&nbsp;<span class="type">[real, dimension(:)]</span></td>
 </tr>
 <tr>
-<td valign="top" align="left"><tt>dtaudu_atm&nbsp;&nbsp;&nbsp;</tt></td><td>   Derivative of zonal wind stress with regard to the lowest level zonal wind speed of the atmos <br>&nbsp;&nbsp;&nbsp;<span class="type">[real, dimension(:)]</span></td>
+<td valign="top" align="left"><tt>dtaudu_atm&nbsp;&nbsp;&nbsp;</tt></td><td>   Derivative of zonal wind stress w.r.t the lowest level zonal 
+   wind speed of the atmos <br>&nbsp;&nbsp;&nbsp;<span class="type">[real, dimension(:)]</span></td>
 </tr>
 <tr>
-<td valign="top" align="left"><tt>dtaudv_atm&nbsp;&nbsp;&nbsp;</tt></td><td>   Derivative of meridional wind stress with regard to the lowest level meridional wind speed of the atmos <br>&nbsp;&nbsp;&nbsp;<span class="type">[real, dimension(:)]</span></td>
+<td valign="top" align="left"><tt>dtaudv_atm&nbsp;&nbsp;&nbsp;</tt></td><td>   Derivative of meridional wind stress w.r.t the lowest level meridional 
+   wind speed of the atmos <br>&nbsp;&nbsp;&nbsp;<span class="type">[real, dimension(:)]</span></td>
 </tr>
 <tr>
 <td valign="top" align="left"><tt>dt&nbsp;&nbsp;&nbsp;</tt></td><td>   Time step (it is not used presently) <br>&nbsp;&nbsp;&nbsp;<span class="type">[real]</span></td>
